compiler/examples/cyclic_test.expected
Test error
Error lustre ordering translate:
cyclic_test.mls:1:1-8:1: there is a cyclic dependency:
x(1) depends on y(0) depends on b(2) depends on x(1)
